--- a/karpathy_videos/05_backprop_ninja.ipynb
+++ b/karpathy_videos/05_backprop_ninja.ipynb
@@ -1,18 +1,558 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RNN (based on Andrej Karpathy educational video)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Let's write a backprop with tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32033\n",
+      "15\n",
+      "['emma', 'olivia', 'ava', 'isabella', 'sophia', 'charlotte', 'mia', 'amelia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = open('./data/names.txt', 'r').read().splitlines()\n",
+    "print(len(words))\n",
+    "print(max(len(w) for w in words))\n",
+    "print(words[:8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'a', 2: 'b', 3: 'c', 4: 'd', 5: 'e', 6: 'f', 7: 'g', 8: 'h', 9: 'i', 10: 'j', 11: 'k', 12: 'l', 13: 'm', 14: 'n', 15: 'o', 16: 'p', 17: 'q', 18: 'r', 19: 's', 20: 't', 21: 'u', 22: 'v', 23: 'w', 24: 'x', 25: 'y', 26: 'z', 0: '.'}\n",
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "chars = sorted(list(set(''.join(words))))\n",
+    "stoi = {s:i+1 for i, s in enumerate(chars)}\n",
+    "stoi['.'] = 0\n",
+    "itos = {i:s for s, i in stoi.items()}\n",
+    "vocab_size = len(itos)\n",
+    "print(itos)\n",
+    "print(vocab_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "block_size = 3\n",
+    "def build_dataset(words):\n",
+    "    X, Y = [], []\n",
+    "\n",
+    "    for w in words:\n",
+    "        context = [0] * block_size\n",
+    "        for ch in w + '.':\n",
+    "            ix = stoi[ch]\n",
+    "            X.append(context)\n",
+    "            Y.append(ix)\n",
+    "            context = context[1:] + [ix]\n",
+    "    \n",
+    "    X = torch.tensor(X)\n",
+    "    Y = torch.tensor(Y)\n",
+    "\n",
+    "    return X, Y\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "random.seed(42)\n",
+    "random.shuffle(words)\n",
+    "n1 = int(0.8*len(words))\n",
+    "n2 = int(0.9*len(words))\n",
+    "\n",
+    "Xtr, Ytr = build_dataset(words[:n1])\n",
+    "Xdev, Ydev = build_dataset(words[n1:n2])\n",
+    "Xte, Yte = build_dataset(words[n2:])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# utility function we will use later when comparing manual gradients to PyTorch gradients\n",
+    "\n",
+    "def cmp(s, dt, t):\n",
+    "    ex = torch.all(dt == t.grad).item()\n",
+    "    app = torch.allclose(dt, t.grad)\n",
+    "    maxdiff = (dt - t.grad).abs().max().item()\n",
+    "    print(f'{s:15s} | exact: {str(ex):5s} | approximate: {str(app):5s} | maxdiff: {maxdiff}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4137\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_embd = 10\n",
+    "n_hidden = 64\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "C = torch.randn((vocab_size, n_embd), generator=g)\n",
+    "\n",
+    "W1 = torch.randn((n_embd * block_size, n_hidden), generator=g) * (5/3) / ((n_embd * block_size) ** 0.5)\n",
+    "b1 = torch.randn(n_hidden, generator=g) * 0.1\n",
+    "\n",
+    "W2 = torch.randn((n_hidden, vocab_size), generator=g) * 0.1\n",
+    "b2 = torch.randn(vocab_size, generator=g) * 0.1\n",
+    "\n",
+    "bngain = torch.randn((1, n_hidden)) * 0.1 + 1.0\n",
+    "bnbias = torch.randn((1, n_hidden)) * 0.1\n",
+    "\n",
+    "parameters = [C, W1, b1, W2, b2, bngain, bnbias]\n",
+    "print(sum(p.nelement() for p in parameters))\n",
+    "for p in parameters:\n",
+    "    p.requires_grad = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 32\n",
+    "n = batch_size # a shorter variable also, for convinience\n",
+    "\n",
+    "ix = torch.randint(0, Xtr.shape[0], (batch_size,), generator=g)\n",
+    "Xb, Yb = Xtr[ix], Ytr[ix]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(3.4811, grad_fn=<NegBackward0>)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# forward pass\n",
+    "\n",
+    "emb = C[Xb]\n",
+    "embcat = emb.view(emb.shape[0], -1) # concatenate the vectors\n",
+    "# Linear layer 1\n",
+    "hprebn = embcat @ W1 + b1 # hidden layer pre-activation\n",
+    "# Batchnorm Layer\n",
+    "bnmeani = 1 / n * hprebn.sum(0, keepdim=True)\n",
+    "bndiff = hprebn - bnmeani\n",
+    "bndiff2 = bndiff**2\n",
+    "bnvar = 1 / (n - 1) * (bndiff2).sum(0, keepdim=True) # note: Bessel's correction (div by n-1, not n)\n",
+    "bnvar_inv = (bnvar + 1e-5)**-0.5\n",
+    "bnraw = bndiff * bnvar_inv\n",
+    "hpreact = bngain * bnraw + bnbias\n",
+    "# Non-linearity\n",
+    "h = torch.tanh(hpreact)\n",
+    "# Linear layer 2\n",
+    "logits = h @ W2 + b2 # output layer\n",
+    "# Cross-entropy loss (same as F.cross_entropy)\n",
+    "logit_maxes = logits.max(1, keepdim=True).values\n",
+    "norm_logits = logits - logit_maxes # subtract max for numerical stability\n",
+    "counts = norm_logits.exp()\n",
+    "counts_sum = counts.sum(1, keepdims=True)\n",
+    "counts_sum_inv = counts_sum**-1\n",
+    "probs = counts * counts_sum_inv\n",
+    "logprobs = probs.log()\n",
+    "loss = -logprobs[range(n), Yb].mean()\n",
+    "\n",
+    "# Pytorch backward pass\n",
+    "for p in parameters:\n",
+    "    p.grad = None\n",
+    "for t in [logprobs, probs, counts, counts_sum, counts_sum_inv, norm_logits, logit_maxes, logits, h, hpreact,\n",
+    "    bnraw, bnvar_inv, bnvar, bndiff2, bndiff, hprebn, bnmeani, embcat, emb]:\n",
+    "    t.retain_grad()\n",
+    "\n",
+    "loss.backward()\n",
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 27])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logprobs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-3.6402, -3.7457, -2.9490, -3.6503, -3.1279, -3.1100, -3.4688, -2.9617,\n",
+       "        -2.8462, -3.8254, -3.2296, -3.5369, -3.0599, -3.3885, -4.1351, -4.2632,\n",
+       "        -2.9271, -3.0369, -4.7090, -3.6269, -3.7753, -2.8079, -3.4454, -3.9531,\n",
+       "        -3.4072, -3.1958, -3.9245, -3.3962, -3.2505, -4.3302, -2.5854, -4.0841],\n",
+       "       grad_fn=<IndexBackward0>)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logprobs[range(n), Yb]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# loss = -(a + b + c) / 3 = -1/3a + -1/3b + -1/3c\n",
+    "# dloss/da = -1/3\n",
+    "# or in general dloss/da = -1/n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loss = -logprobs[range(n), Yb].mean()\n",
+    "\n",
+    "dlogprobs = None ## this will hold the derivative of the loss with respect to all the elements of logprobs. \n",
+    "# It should be the size of logprobs.shape\n",
+    "\n",
+    "dlogprobs = torch.zeros_like(logprobs)\n",
+    "dlogprobs[range(n), Yb] = -1.0 / n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logprobs        | exact: True  | approximate: True  | maxdiff: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's check that this is correct\n",
+    "\n",
+    "cmp('logprobs', dlogprobs, logprobs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# logprobs = probs.log()\n",
+    "# d/dx log(x) = 1 / x\n",
+    "\n",
+    "dprobs = (1.0 / probs) * dlogprobs # chain rule"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "probs           | exact: True  | approximate: True  | maxdiff: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "cmp('probs', dprobs, probs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# probs = counts * counts_sum_inv   ### these matrcies have different shapes but there is an implicit broadcasting\n",
+    "# d/dx ax = a\n",
+    "\n",
+    "dcounts_sum_inv = (counts * dprobs).sum(1, keepdim=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 1])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dcounts_sum_inv.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "counts_sum_inv  | exact: True  | approximate: True  | maxdiff: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "cmp('counts_sum_inv', dcounts_sum_inv, counts_sum_inv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# probs = counts * counts_sum_inv\n",
+    "\n",
+    "dcounts = counts_sum_inv * dprobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# counts_sum_inv = counts_sum**-1\n",
+    "\n",
+    "dcounts_sum = -1 * counts_sum**(-2) * dcounts_sum_inv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "counts_sun      | exact: True  | approximate: True  | maxdiff: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "cmp('counts_sum', dcounts_sum, counts_sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# counts_sum = counts.sum(1, keepdims=True)\n",
+    "\n",
+    "dcounts += torch.ones_like(counts) * dcounts_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dcounts         | exact: True  | approximate: True  | maxdiff: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "cmp('dcounts', dcounts, counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# counts = norm_logits.exp()\n",
+    "\n",
+    "dnorm_logits = counts * dcounts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dnorm_logits    | exact: True  | approximate: True  | maxdiff: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "cmp('dnorm_logits', dnorm_logits, norm_logits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# norm_logits = logits - logit_maxes\n",
+    "\n",
+    "dlogits = 1 * dnorm_logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dlogits         | exact: False | approximate: True  | maxdiff: 6.984919309616089e-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "cmp('dlogits', dlogits, logits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# norm_logits = logits - logit_maxes\n",
+    "\n",
+    "dlogit_maxes = 1 * dnorm_logits"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.0 ('dl')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ddb6ac1274766aae8d48ea24c2a86f46ae3ad795c594d0c816246e36b08c5206"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
